added info button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       
       <div class="col-md-4 nav-text">
         <div class="navbar-text">
-          <p>FIND <span class="text-info" style="font-size: 25px">COOL MUSIC</span> NOW</p>
+          <p>FIND <span class="text-info" style="font-size: 25px">COOL MUSIC</span> NOW <a href="https://github.com/NoraKitchen/musicapp/blob/master/README.md"><span class="info-button glyphicon glyphicon-info-sign"></span></a></p>
         </div>
       </div>
       
